--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,9 @@ jobs:
         with:
           build: npm run build
           start: npm start
-          wait-on: http://localhost:3030
+          wait-on: http://localhost:4200
+          record: true
+          group: 'Actions example'
+        env:
+          # pass the Dashboard record key as an environment variable
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
